test_reports/local_test_summary.txt
Local Test Summary
=================
Generated: 2025-07-30 01:21:26
Duration: 1.08 seconds

UNIT:
Status: FAILED
Error Output:
Traceback (most recent call last):
  File "/Users/adidubbs/Desktop/IntelliVision/intellivision/manage.py", line 22, in <module>
    main()
  File "/Users/adidubbs/Desktop/IntelliVision/intellivision/manage.py", line 18, in main
    execute_from_command_line(sys.argv)
  File "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/django/core/management/__init__.py", line 442, in execute_from_command_line
    utility.execute()
  File "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/django/core/management/__init__.py", line 436, in execute
    self.fetch_command(subcommand).run_from_argv(self.argv)
  File "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/django/core/management/commands/test.py", line 24, in run_from_argv
    super().run_from_argv(argv)
  File "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/django/core/management/base.py", line 408, in run_from_argv
    parser = self.create_parser(argv[0], argv[1])
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/django/core/management/base.py", line 371, in create_parser
    self.add_arguments(parser)
  File "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/django/core/management/commands/test.py", line 49, in add_arguments
    test_runner_class = get_runner(settings, self.test_runner)
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/django/test/utils.py", line 383, in get_runner
    test_runner_class = test_runner_class or settings.TEST_RUNNER
                                             ^^^^^^^^^^^^^^^^^^^^
  File "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/django/conf/__init__.py", line 81, in __getattr__
    self._setup(name)
  File "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/django/conf/__init__.py", line 68, in _setup
    self._wrapped = Settings(settings_module)
                    ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/django/conf/__init__.py", line 166, in __init__
    mod = importlib.import_module(self.SETTINGS_MODULE)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/importlib/__init__.py", line 90, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1381, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1354, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1318, in _find_and_load_unlocked
ModuleNotFoundError: No module named 'intellivision.settings'

--------------------------------------------------

FACE_AUTH:
Status: FAILED
Error Output:
Traceback (most recent call last):
  File "/Users/adidubbs/Desktop/IntelliVision/intellivision/manage.py", line 22, in <module>
    main()
  File "/Users/adidubbs/Desktop/IntelliVision/intellivision/manage.py", line 18, in main
    execute_from_command_line(sys.argv)
  File "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/django/core/management/__init__.py", line 442, in execute_from_command_line
    utility.execute()
  File "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/django/core/management/__init__.py", line 436, in execute
    self.fetch_command(subcommand).run_from_argv(self.argv)
  File "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/django/core/management/commands/test.py", line 24, in run_from_argv
    super().run_from_argv(argv)
  File "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/django/core/management/base.py", line 408, in run_from_argv
    parser = self.create_parser(argv[0], argv[1])
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/django/core/management/base.py", line 371, in create_parser
    self.add_arguments(parser)
  File "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/django/core/management/commands/test.py", line 49, in add_arguments
    test_runner_class = get_runner(settings, self.test_runner)
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/django/test/utils.py", line 383, in get_runner
    test_runner_class = test_runner_class or settings.TEST_RUNNER
                                             ^^^^^^^^^^^^^^^^^^^^
  File "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/django/conf/__init__.py", line 81, in __getattr__
    self._setup(name)
  File "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/django/conf/__init__.py", line 68, in _setup
    self._wrapped = Settings(settings_module)
                    ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/django/conf/__init__.py", line 166, in __init__
    mod = importlib.import_module(self.SETTINGS_MODULE)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/importlib/__init__.py", line 90, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1381, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1354, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1318, in _find_and_load_unlocked
ModuleNotFoundError: No module named 'intellivision.settings'

--------------------------------------------------

PERMISSIONS:
Status: PASSED
--------------------------------------------------

CELERY:
Status: FAILED
Error Output:
Celery configuration error: [Errno 30] Read-only file system: '/app'
--------------------------------------------------

DEPENDENCIES:
Status: FAILED
Error Output:

--------------------------------------------------


VM/Apache Deployment Checklist
==========================
□ Verify Apache configuration in VM
□ Check Apache log paths match VM setup
□ Verify file permissions in VM environment
□ Test media file uploads in VM
□ Verify Celery worker starts correctly in VM
□ Check Redis connection in VM environment
□ Verify static files are served by Apache
□ Test WSGI configuration
□ Verify SSL/TLS configuration if applicable
□ Check Apache error logs after deployment
